@startuml 14-clases-dominio-ordermanager
title Dominio — motor genérico (business.ordermanager.dominio): el agregado único OrdenRoot ⊃ Proceso
!pragma layout smetana
hide empty members
skinparam classAttributeIconSize 0

class OrdenRoot <<@AggregateRoot>> {
  -id : OrdenId  «@Identity»
  -proceso : Proceso<?>
  -prioridad : Prioridad  «inmutable, fijada al crear»
  -intentos : int
  -proximoReintentoEn : Instant
  -tokenTrabajador : UUID
  -tokenExpiraEn : Instant
  -ticketAbiertoEn : Instant
  -completadaEn : Instant
  -ultimoError : DetalleError
  -version : long  «ÚNICA del agregado»
  -creadaEn : Instant  «inmutable, fijada al crear con\nel ahora de la factoría»
  -actualizadaEn : Instant  «la fija el propio agregado en\nCADA mutación, con el ahora de la operación»
  +{static} nueva(proceso, prioridad, ahora) : OrdenRoot
  +{static} nueva(proceso, ahora) : OrdenRoot  «sobrecarga, prioridad=Prioridad.normal()»
  +{static} rehidratar(proceso, prioridad, intentos, proximoReintentoEn,\ntoken, tokenExpiraEn, ticketAbiertoEn, completadaEn,\nultimoError, version, creadaEn, actualizadaEn)
  +{static} rehidratar(proceso, intentos, ...)  «sobrecarga, prioridad=Prioridad.normal()»
  +asignarToken(token, lease, ahora)
  +renovarLease(lease, ahora)
  +tieneTokenVigente(ahora) : boolean
  +liberarToken()
  +resetearIntentos(ahora)  «intentos=0, ticketAbiertoEn=null Y ultimoError=null»
  +marcarTicketAbierto(ahora)
  +despertar(ahora)  «proximoReintentoEn=ahora, libera token»
  +aparcar(ventana, ahora)  «proximoReintentoEn=ahora+ventana»
  +programarReintento(PoliticaReintentos, DetalleError, ahora)  «intentos++; ultimoError=error»
  +finalizar(ahora)  «resetearIntentos(ahora) + completadaEn=ahora, libera token»
  +estaViva() : boolean  «completadaEn == null»
  +turnoVencido(ahora) : boolean  «!proximoReintentoEn.isAfter(ahora),\nespejo de buscarCandidatas, ver 17»
  +proceso() : Proceso<?>
  +reemplazarProceso(Proceso<?> nuevo, ahora)  «ÚNICO punto de sustitución\ndel campo proceso»
  +id() : OrdenId
  +tipo() : TipoOrden  «delega en proceso.tipo()»
  +prioridad() : Prioridad
  +creadaEn() : Instant
  +actualizadaEn() : Instant
}
note right of OrdenRoot
  Reloj determinista: nunca Instant.now(); todo método que
  depende del tiempo recibe Instant ahora como ÚLTIMO parámetro,
  aportado por la capa de aplicación (que hoistea un único
  var ahora = Instant.now() por operación y lo reutiliza en todas
  las mutaciones de esa transacción, ver 02-08). Una sola version
  protege ejecución (intentos/lease/ticket/completadaEn) + negocio
  (proceso): varios flujos mutan ambos en la misma tx (consumer
  Kafka, soporte, arranque de secundarias), así que separarlos en
  dos agregados violaría "un agregado por transacción". proceso ya
  NO es final: cada transición de Proceso (VO inmutable, ver abajo)
  devuelve una instancia nueva, y reemplazarProceso(nueva, ahora) es
  el único método que la sustituye en el campo. creadaEn/actualizadaEn
  las MODELA el propio agregado (ya no un @PrePersist/@PreUpdate de
  infraestructura, ver 23): creadaEn se fija una vez, al crear
  (nueva/rehidratar); actualizadaEn la fija CADA mutador con el ahora
  de su operación.
end note

abstract class "Proceso<E extends Enum<E>>" as Proceso <<@ValueObject>> {
  #id : OrdenId  «@Identity»
  #externalId : ExternalId
  #estado : E
  #auditoria : List<AuditoriaIntervencion>
  {abstract} +tipo() : TipoOrden
  {abstract} +comandoActual() : ComandoPaso
  {abstract} +aplicarYAvanzar(ResultadoPaso) : Proceso<E>
  {abstract} +terminada() : boolean
  {abstract} +marcarPasoActualOkManual(quien, justificacion, datos) : Proceso<E>
  #auditar(quien, accion, detalle) : List<AuditoriaIntervencion>
  +id() / +externalId() / +estado() / +auditoria()
}
note right of Proceso
  Value object INMUTABLE interno del agregado: SOLO negocio (la
  FSM E y la auditoría). Sin version propia (la controla
  OrdenRoot) y sin reintentos/tiempo/token: eso es responsabilidad
  de OrdenRoot. Cada transición (aplicarYAvanzar,
  marcarPasoActualOkManual, y las específicas de cada saga —
  cancelar, compensacionCompletada, solicitudEnviada,
  respuestaRecibida, ver 15/16) devuelve una
  INSTANCIA NUEVA en vez de mutar; OrdenRoot.reemplazarProceso(nueva, ahora)
  es quien sustituye el valor tras cada transición (ver 02-08).
  Clase neutra del motor: no conoce "saga". Sus subclases
  concretas (SagaPrincipal, SagaSecundariaN) viven en
  business.sagas.dominio — ver 15 y 16.
end note

class PoliticaReintentos {
  -ESCALERA : List<Duration> = {1,3,5,10,\n20,45,90,180 min}
  +esperaTras(intentosFallidos) : Duration
  +debeAbrirTicket(intentos) : boolean  «intentos >= 8»
}
note bottom of PoliticaReintentos
  Nunca se agota: consumida la escalera (8 intentos) se sigue
  reintentando cada 180 min indefinidamente. debeAbrirTicket
  combina con OrdenRoot.ticketAbiertoEn == null en la query del
  planificador de tickets (ver 07 y 17).
end note

class TipoOrden <<@ValueObject, record>> {
  valor : String
}
note bottom of TipoOrden
  VO abierto (no un enum cerrado): cualquier aplicación que
  reutilice el motor define sus propios tipos (p. ej. las
  constantes TIPO de las sagas — ver 15/16) sin tocar este
  paquete. Antes era el enum cerrado TipoSaga.
end note

class Prioridad <<@ValueObject, record>> {
  peso : int
  +{static} normal() : Prioridad  «peso=0»
}
note bottom of Prioridad
  Peso de planificación NEUTRO: a mayor peso, antes la coge el
  planificador (buscarCandidatas/buscarEjecutables, ver 17/23
  ordenan prioridad DESC). El motor solo ordena por él, no sabe
  qué lo determina -- lo fija quien crea la orden. En las sagas,
  DatoNegocio3.prioridad() traduce el origen a este peso (ver 26);
  el motor no conoce ese mapeo.
end note

interface ComandoPaso <<marcadora>>
interface ResultadoPaso <<marcadora>>

class ConcurrenciaOptimistaException <<RuntimeException>> {
  (OrdenId id, long versionEsperada)
}
class ExcepcionServicioExterno <<RuntimeException>> {
  -motivo : MotivoFallo  «transient»
}
class PasoNoIntervenibleException <<RuntimeException>> {
  (OrdenId id, String detalle)
}
class DatosManualesRequeridosException <<RuntimeException>> {
  (OrdenId id, String detalle)
}
class OrdenYaCompletadaException <<RuntimeException>> {
  (OrdenId id)
}

class MotivoFallo <<@ValueObject>> {
  codigo : String
  detalle : String
  esReintentable : boolean
  +{static} timeout() / errorTecnico(detalle) / errorNegocio(detalle)
}
class DetalleError <<@ValueObject, record>> {
  tipo : String
  mensaje : String
  +{static} de(Throwable) : DetalleError
}
note bottom of DetalleError
  Lo que soporte ve de un fallo: clase de la excepción + mensaje,
  NUNCA el stacktrace. La rellena ServicioContinuarOrden
  (DetalleError.de(e) sobre la RuntimeException de un paso) -- ver 17.
end note
class "OrdenId, ExternalId,\nUsuarioSoporte, AuditoriaIntervencion" as VOs <<@ValueObject>>

OrdenRoot "1" *-- "1" Proceso : proceso
OrdenRoot "1" *-- "1" Prioridad : prioridad
OrdenRoot ..> PoliticaReintentos : programarReintento(politica, error, ahora)
OrdenRoot ..> DetalleError : ultimoError
OrdenRoot ..> ConcurrenciaOptimistaException : el adaptador la lanza\nsi la version no coincide
Proceso ..> TipoOrden : tipo()
Proceso ..> ComandoPaso : comandoActual()
Proceso ..> ResultadoPaso : aplicarYAvanzar()
Proceso ..> PasoNoIntervenibleException
Proceso ..> DatosManualesRequeridosException
ExcepcionServicioExterno ..> MotivoFallo

' Layout: columnas sin cruces
ComandoPaso -[hidden]down- ResultadoPaso
MotivoFallo -[hidden]down- VOs

note as NFrontera
  Regla de frontera (ArchUnit, CLAUDE.md): ninguna clase de
  business.ordermanager (ni infraestructure.ordermanager) puede
  depender de business.sagas ni de infraestructure.sagas. Este
  paquete es reutilizable con cualquier tipo de orden — ver
  25-clases-dominio-comun-sagas para el shared kernel específico
  de las sagas (ContextoArranque, RefPaso1/5/7).
end note
@enduml
